# starter-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/starter_python/: __init__.py
tests/: test_base.py
